--- a/configs/test.yaml
+++ b/configs/test.yaml
@@ -1,10 +1,11 @@
 OUTPUT_DIR: 'output'
 LOG_DIR: 'log'
-MODEL: 'AntiFlareNet'
+MODEL: 'AntiFlareNet-u-net-resnet'
 GPUS: '0'
 WORKERS: 4
-PRINT_FREQ: 100
-IMAGE_SIZE: 256
+PRINT_FREQ: 200
+BACKBONE: 'u-net-resnet'
+IMAGE_SIZE: 224
 
 # Data directory setting
 DATA_DIR: 'data'
@@ -22,7 +23,7 @@ CUDNN:
   ENABLED: True
 
 # Dataset setting
-AUGMENTATION_STRIDE: 128
+AUGMENTATION_STRIDE: 112
 DATA_CLASS: 'real'
 RANDOM_FLIP: True
 VALIDATION_RATIO: 0.2
@@ -35,7 +36,7 @@ TRAIN:
   NESTEROV: False
   GAMMA1: 0.99
   GAMMA2: 0.0
-  BATCH_SIZE: 32
+  BATCH_SIZE: 16
   SHUFFLE: True
   BEGIN_EPOCH: 0
   END_EPOCH: 200
@@ -46,7 +47,7 @@ TRAIN:
 
 # Test parameter
 TEST:
-  BATCH_SIZE: 32
+  BATCH_SIZE: 16
   STATE: 'best'
   FLIP_TEST: False
   POST_PROCESS: False
